--- a/client/src/Components/CardsContainer/CardsContainer.css
+++ b/client/src/Components/CardsContainer/CardsContainer.css
@@ -1,3 +1,5 @@
+
+
 .container{
     /* border:2px solid black; */
     display: grid;
@@ -5,14 +7,73 @@
     border-radius: 15px;
     flex-wrap: wrap;
     gap: 2px;
-    margin-left: 3rem;
+    
     grid-template-columns: repeat(4, 25%);
     justify-content: center;
     margin-bottom: 10px;
+    
 }
 .card{
     border: 5px solid rgb(52, 101, 175);
     height: fit-content;
     width: 240px;
     margin-top: 15px;
+    text-decoration: none;
+    
+}
+.loading{
+    justify-content: center;
+    display: flex;
+    align-items: center;
+}
+.link{
+    text-decoration: none;
+    width: 200;
+    height: 200;
+    
+}
+
+.loadingContainer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.navBar{
+    
+    background-color:  rgba(205, 179, 8, 0.645);
+    display: flex;
+    justify-content: space-around;
+    height: 5rem;
+    align-items: center;
+}
+.filter{
+    display: flex;
+    gap: 1rem;
+}
+.createPokemon{
+    border: 2px solid rgb(52, 101, 175);
+    background-color:rgba(255, 205, 5, 0.74);
+    color: rgb(52, 101, 175);
+    height: 2rem;
+    border-radius: 10px;
+}
+.handlePageButton{
+    border: 2px solid rgb(52, 101, 175);
+    background-color:rgba(255, 205, 5, 0.74);
+    color:  rgb(52, 101, 175);
+    border-radius: 6px;
+    margin-left: 8px;
+    margin-right: 8px;
+    height: 2rem;
+    width: 2rem;    
+}
+
+.handlePageContainer{
+    margin-bottom: 10px;
+    margin-top: 10px;
+    justify-content: space-around;
+}
+.pokemonsCards{
+    display: flex;
+    justify-content: center;
 }
